Apply factor graph implementation to real data (no good results yet)

--- a/python/WallPreAnalysis.ipynb
+++ b/python/WallPreAnalysis.ipynb
@@ -865,7 +865,7 @@
     "        add_colorbar(fig, ax, im, title=\"log-probability\")\n",
     "        ax.set_ylabel(\"estimated distance [cm]\")\n",
     "        ax.set_xlabel(\"real distance [cm]\")\n",
-    "        ax.set_title(f\"appendix{appendix}, {n_points} measurements\")\n",
+    "        #ax.set_title(f\"appendix{appendix}, {n_points} measurements\")\n",
     "        leg = ax.legend(framealpha=0, loc='upper right')\n",
     "        for text in leg.get_texts():\n",
     "            plt.setp(text, color='w')\n",
@@ -943,14 +943,14 @@
     "    columns=[\"algorithm\", \"mics\", \"calib_method\", \"estimates\", \"distances\", \"appendix\", \"time\"]\n",
     ")\n",
     "\n",
-    "#calib_method_list = [\"on_the_fly\"] \n",
-    "calib_method_list = [\"stepper\"]\n",
+    "calib_method_list = [\"on_the_fly\"] \n",
+    "#calib_method_list = [\"stepper\"]\n",
     "# mic_list = [[0], [1], [2], [3]]\n",
     "mic_list = [[0, 1, 2, 3]] #[[1, 3], [0, 2], [0, 1, 3], [0, 1, 2, 3]]\n",
     "algorithm_list = [\"bayes\"]#, \"cost\"]\n",
-    "no_deco = True #False\n",
+    "no_deco = False\n",
     "\n",
-    "calib = False\n",
+    "calib_flag = False\n",
     "for params in plot_dict:\n",
     "    exp_name, motors, appendix = params.values()\n",
     "\n",
@@ -961,9 +961,10 @@
     "    xvalues, yvalues, values_unsorted, positions_cm, yaws_deg = extract_valid(row)\n",
     "    n_points = values_unsorted.shape[0]\n",
     "\n",
-    "    if not calib:\n",
+    "    \n",
+    "    if not calib_flag:\n",
     "        calib_on_the_fly = np.median(values_unsorted[:n_calib, :, :], axis=0)\n",
-    "        #calib = True\n",
+    "        calib_flag = True\n",
     "    #print(\"calibration:\", values_unsorted[:n_calib, :, :])\n",
     "    std_values = np.std(values_unsorted[:n_calib, :, :], axis=0)\n",
     "\n",
@@ -1092,7 +1093,7 @@
     "            fig, ax = plot_matrix(dists_cm, results_matrix, d_estimates, no_deco=no_deco)\n",
     "            if calib_method == 'on_the_fly':\n",
     "                add_rect(ax, n_calib, max(dists_cm), no_deco=no_deco)\n",
-    "            save_fig(fig, plot_name + \"_probabilities.pdf\")\n",
+    "            #save_fig(fig, plot_name + \"_probabilities.pdf\")\n",
     "\n",
     "            d_estimates_moving = get_estimates(results_matrix_moving, dists_cm)\n",
     "            errors_df.loc[len(errors_df), :] = {\n",
@@ -1107,7 +1108,69 @@
     "            fig, ax = plot_matrix(dists_cm, results_matrix_moving, d_estimates_moving, no_deco=no_deco)\n",
     "            if calib_method == 'on_the_fly':\n",
     "                add_rect(ax, n_calib, max(dists_cm), no_deco=no_deco)\n",
-    "            save_fig(fig, plot_name + f\"_win{n_window}_probabilities.pdf\")"
+    "            #save_fig(fig, plot_name + f\"_win{n_window}_probabilities.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from factor_graph.plot import plot_projections\n",
+    "import gtsam\n",
+    "# Try factor graph implementation\n",
+    "print(\"matrix\", results_matrix_moving.shape)\n",
+    "print(\"dists\", dists_cm.shape)\n",
+    "print(\"positions\", positions_cm.shape)\n",
+    "print(\"yaws_deg\", yaws_deg.shape)\n",
+    "\n",
+    "from audio_gtsam.wall_backend import WallBackend\n",
+    "\n",
+    "wall_backend = WallBackend()\n",
+    "yaw_start = np.pi\n",
+    "\n",
+    "use_groundtruth = False\n",
+    "\n",
+    "starting = gtsam.Values()\n",
+    "\n",
+    "#pose = gtsam.Pose3(t=positions_cm[n_calib, :]*1e-2, r=gtsam.Rot3.Ypr(yaw_start, 0, 0))\n",
+    "#starting.insert(gtsam.symbol_shorthand.X(0), gtsam.Pose3(r=gtsam.Rot3.Ypr(yaw_start, 0, 0), t=[0, 0, 0]))\n",
+    "#starting.insert(gtsam.symbol_shorthand.P(0), gtsam.OrientedPlane3(n=gtsam.Unit3([0, 1, 0]), d=0.6))\n",
+    "#plot_projections(starting, axis_length=0.2, ls=\"-\", perspective=False)\n",
+    "\n",
+    "for i, prob_dists in enumerate(results_matrix_moving.T):\n",
+    "    if i < n_calib:\n",
+    "        print(\"skipping\", i)\n",
+    "        continue\n",
+    "    \n",
+    "    position_cm = positions_cm[i, :] - positions_cm[n_calib, :]\n",
+    "    yaw_deg = yaws_deg[i]\n",
+    "    #print(\"yaw:\", round(yaw_deg))\n",
+    "    \n",
+    "    #print(f\"prior factor with {pose_t.translation()}\")\n",
+    "    pose_factor = wall_backend.add_pose(r_world=position_cm * 1e-2, \n",
+    "                                        yaw=yaw_start + (yaw_deg / 180 * np.pi))\n",
+    "    print(\"position_cm\", position_cm)\n",
+    "    #wall_backend.add_plane(distance=0.6, azimuth=-np.pi/2)\n",
+    "    \n",
+    "    if use_groundtruth:\n",
+    "        dists_cm = np.arange(100)\n",
+    "        distance_gt = int(60 + position_cm[1])\n",
+    "        print(\"ground truth distance\", distance_gt)\n",
+    "        prob_dists = np.zeros(100)\n",
+    "        prob_dists[distance_gt] = 1.0\n",
+    "    try:\n",
+    "        wall_backend.add_planes_from_distance_distribution(dists_cm, prob_dists, azimuth_deg=-90, n_estimates=1)\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "wall_backend.get_results()\n",
+    "plot_projections(wall_backend.all_initial_estimates, axis_length=0.2, ls=\":\", perspective=False, side=False)\n",
+    "plt.show()\n",
+    "plot_projections(wall_backend.result, axis_length=0.1, perspective=False, side=True)\n",
+    "plt.show()"
    ]
   },
   {
@@ -1117,6 +1180,7 @@
    "outputs": [],
    "source": [
     "fname = f'../experiments/{exp_name}/results.pkl'\n",
+    ".\n",
     "errors_df.to_pickle(fname)\n",
     "print('saved as', fname)"
    ]
