--- a/python/factor_graph/AudioGTSAM.ipynb
+++ b/python/factor_graph/AudioGTSAM.ipynb
@@ -28,54 +28,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TODO:\n",
-    "\n",
-    "- add ground truth in plots below\n",
-    "- figure out way to deal with outliers"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_distribution(estimate, range_=[0, 1], n_outliers=1, std=0.01):\n",
-    "    import scipy.stats\n",
-    "    # add noise to distance\n",
-    "    estimate = np.random.normal(estimate, scale=std)\n",
-    "    values = np.arange(*range_, step=0.01)\n",
-    "    prob = np.zeros(len(values))\n",
-    "    prob += scipy.stats.norm(estimate, std).pdf(values)\n",
-    "    for _ in range(n_outliers):\n",
-    "        outlier = np.random.uniform(*range_)\n",
-    "        prob += scipy.stats.norm(outlier, 2*std).pdf(values)\n",
-    "    prob /= np.sum(prob)\n",
-    "    return values, prob\n",
-    "\n",
-    "def get_estimates(values, prob):\n",
-    "    indices, __ = scipy.signal.find_peaks(prob)\n",
-    "    estimates = values[indices]\n",
-    "    stds = (values[1]-values[0]) / (prob[indices] * np.sqrt(2 * np.pi))\n",
-    "    return estimates, stds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('../../src/audio_gtsam/')\n",
-    "from audio_gtsam.wall_backend import WallBackend\n",
-    "from helpers import WallSimulation, plot_all\n",
+    "from audio_gtsam.wall_backend import WallBackend, get_estimates\n",
+    "from helpers import WallSimulation, plot_all, get_distribution, deg, rad\n",
     "import scipy.signal\n",
     "import itertools\n",
     "import plot\n",
+    "\n",
+    "np.random.seed(2)\n",
+    "\n",
+    "P = gtsam.symbol_shorthand.P\n",
+    "X = gtsam.symbol_shorthand.X\n",
     "\n",
     "times = np.linspace(0, 1, 3)\n",
     "n_outliers = 1\n",
@@ -89,17 +60,38 @@
     "wall_simulation.initialize(plane, pose_0)\n",
     "wall_simulation.set_velocities(linear_m_s=0.1, yaw_deg_s=0)\n",
     "\n",
+    "ground_truth = gtsam.Values()\n",
+    "initial_estimate = gtsam.Values()\n",
+    "\n",
+    "ground_truth.insert(P(0), plane)\n",
+    "initial_estimate.insert(P(0), plane)\n",
+    "\n",
+    "graph = gtsam.NonlinearFactorGraph()\n",
+    "\n",
+    "noise_model = gtsam.noiseModel.Isotropic.Sigma(6, 1.0)\n",
+    "plane_noise = gtsam.noiseModel.Diagonal.Sigmas([0.8, 0.8, 5])\n",
+    "huber_estimator = gtsam.noiseModel.mEstimator.Huber(1.3)\n",
+    "plane_noise_robust = gtsam.noiseModel.Robust(huber_estimator, plane_noise)\n",
+    "prior_factor = gtsam.PriorFactorOrientedPlane3(P(0), plane, plane_noise_robust)\n",
+    "graph.push_back(prior_factor)\n",
+    "\n",
     "for t, time in enumerate(times):\n",
     "    wall_simulation.move_until_time(time)\n",
     "    \n",
-    "    pose_t = wall_simulation.real_pose()\n",
+    "    if t == 0:\n",
+    "        pose_t = wall_simulation.expected_pose()\n",
+    "    else:\n",
+    "        pose_t = wall_simulation.real_pose()\n",
     "    #pose_t = wall_simulation.measure_pose()\n",
     "    #pose_t = wall_simulation.expected_pose()\n",
+    "    ground_truth.insert(X(t), pose_t)\n",
+    "    initial_estimate.insert(X(t), pose_t)\n",
     "    \n",
     "    plane_meas, wall_angle, elevation, distance = wall_simulation.measure_plane()\n",
     "    \n",
-    "    wall_backend.add_pose(r_world=pose_t.translation(), \n",
-    "                          yaw=pose_t.rotation().yaw())\n",
+    "    pose_factor = wall_backend.add_pose(r_world=pose_t.translation(), \n",
+    "                          yaw=pose_t.rotation().yaw(),)\n",
+    "    graph.push_back(pose_factor)\n",
     "    \n",
     "    # angle to wall as we measure it (between 0 and 2pi)\n",
     "    azimuth = np.pi + wall_angle\n",
@@ -115,30 +107,82 @@
     "    axs[1].plot(angle_values * 180 / np.pi, angle_prob)\n",
     "    axs[1].set_xlabel('angle [deg]')\n",
     "    \n",
+    "    #print(distance_values)\n",
+    "    wall_backend.add_planes_from_distance_distribution(\n",
+    "        distance_values,  # cm\n",
+    "        distance_prob, \n",
+    "        azimuth_deg=deg(azimuth), \n",
+    "        azimuth_deg_std=deg(10)\n",
+    "    )\n",
     "    distance_estimates, distance_stds = get_estimates(distance_values, distance_prob)\n",
     "    angle_estimates, angle_stds = get_estimates(angle_values, angle_prob)\n",
-    "    #print(distance_estimates, angle_estimates)\n",
-    "    \n",
+    "    #\n",
     "    for d_i, a_i in itertools.product(range(len(distance_estimates)), \n",
     "                                    range(len(angle_estimates))):\n",
     "        distance = distance_estimates[d_i]\n",
     "        azimuth = angle_estimates[a_i]\n",
     "        noise = [distance_stds[d_i], angle_stds[a_i], 0]\n",
-    "        \n",
-    "        print(f\"add wall estimate at {distance*100:.1f}cm, {azimuth*180/np.pi:.0f}deg\")\n",
-    "        \n",
     "        wall_angle = azimuth - np.pi\n",
-    "        wall_backend.add_plane(distance, wall_angle, plane_noise=noise)\n",
+    "        print(f\"OUTSIDE: add wall estimate at {distance*100:.1f}cm, {deg(wall_angle):.0f}deg\")\n",
+    "        plane_factor = wall_backend.add_plane(distance, wall_angle, plane_noise=noise)\n",
+    "        graph.push_back(plane_factor)\n",
     "        # add noise to angle\n",
-    "        #print(f\"adding plane measurement: {distance*100:.0f}cm {wall_angle:5.0f}deg\")\n",
-    "        #print(wall_backend.isam.getVariableIndex().nFactors())\n",
-    "        #print(wall_backend.isam.getVariableIndex())\n",
     "        planes, poses = wall_backend.get_results()\n",
     "plt.show()\n",
+    "#print(wall_backend.result.atPose3(X(t)))\n",
     "\n",
-    "plot_all(wall_backend.result, perspective=False, top=True, side=False)\n",
-    "plot.plot_trajectory(2, wall_backend.result, ls=\":\")\n",
+    "plot_all(ground_truth, perspective=False, top=True, side=False)\n",
+    "plot_all(wall_backend.result, perspective=False, top=True, side=False, ls=\":\")\n",
+    "\n",
+    "print(\"ISAM initial error:\", graph.error(initial_estimate))\n",
+    "print(\"ISAM final error:\", graph.error(wall_backend.result))\n",
+    "\n",
+    "# throws linear exception\n",
+    "try:\n",
+    "    params = gtsam.GncGaussNewtonParams()\n",
+    "    opt = gtsam.GncGaussNewtonOptimizer(graph, initial_estimate, params)\n",
+    "    result = opt.optimize()\n",
+    "    plot_all(result, perspective=False, top=True, side=False, ls=\"--\")\n",
+    "    print(\"Gnc initial error:\", graph.error(initial_estimate))\n",
+    "    print(\"Gnc final error:\", graph.error(result))\n",
+    "except Exception as e:\n",
+    "    print(\"GncGaussNewton did not work.\")\n",
+    "    print(\"Error message:\", e)\n",
+    "\n",
+    "try:\n",
+    "    params = gtsam.GaussNewtonParams()\n",
+    "    opt = gtsam.GaussNewtonOptimizer(graph, initial_estimate, params)\n",
+    "    result = opt.optimize()\n",
+    "    plot_all(result, perspective=False, top=True, side=False, ls=\"-.\")\n",
+    "    print(\"GN initial error:\", graph.error(initial_estimate))\n",
+    "    print(\"GN final error:\", graph.error(result))\n",
+    "except Exception as e:\n",
+    "    print(\"GaussNewton did not work.\")\n",
+    "    print(\"Error message:\", e)\n",
+    "    \n",
+    "try:\n",
+    "    params = gtsam.LevenbergMarquardtParams()\n",
+    "    opt = gtsam.LevenbergMarquardtOptimizer(graph, initial_estimate, params)\n",
+    "    result = opt.optimize()\n",
+    "    plot_all(result, perspective=False, top=True, side=False, ls=\"--\")\n",
+    "    print(\"LM initial error:\", graph.error(initial_estimate))\n",
+    "    print(\"LM final error:\", graph.error(result))\n",
+    "except Exception as e:\n",
+    "    print(\"LevenbergMarquardt did not work.\")\n",
+    "    print(\"Error message:\", e)\n",
+    "\n",
+    "#plot.plot_trajectory(2, ground_truth, ls=\":\", axis_length=0.2)\n",
+    "#plt.show()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = gtsam.GaussNewtonParams()"
    ]
   },
   {
@@ -155,7 +199,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "noiseModel.F"
+   ]
   },
   {
    "cell_type": "code",
