Add first working version of gtsam on real data

--- a/python/WallPreAnalysis.ipynb
+++ b/python/WallPreAnalysis.ipynb
@@ -1156,18 +1156,18 @@
     "    print(\"position_cm\", position_cm)\n",
     "    #wall_backend.add_plane(distance=0.6, azimuth=-np.pi/2)\n",
     "    \n",
+    "    distance_gt = int(60 + position_cm[1])\n",
+    "    print(\"ground truth distance\", distance_gt)\n",
     "    if use_groundtruth:\n",
     "        dists_cm = np.arange(100)\n",
-    "        distance_gt = int(60 + position_cm[1])\n",
-    "        print(\"ground truth distance\", distance_gt)\n",
     "        prob_dists = np.zeros(100)\n",
     "        prob_dists[distance_gt] = 1.0\n",
     "    try:\n",
-    "        wall_backend.add_planes_from_distance_distribution(dists_cm, prob_dists, azimuth_deg=-90, n_estimates=1)\n",
+    "        wall_backend.add_planes_from_distance_distribution(dists_cm, prob_dists, azimuth_deg=-90, n_estimates=1, verbose=True)\n",
     "    except Exception as e:\n",
     "        print(e)\n",
     "wall_backend.get_results()\n",
-    "plot_projections(wall_backend.all_initial_estimates, axis_length=0.2, ls=\":\", perspective=False, side=False)\n",
+    "plot_projections(wall_backend.all_initial_estimates, axis_length=0.2, ls=\":\", perspective=False, side=True)\n",
     "plt.show()\n",
     "plot_projections(wall_backend.result, axis_length=0.1, perspective=False, side=True)\n",
     "plt.show()"
@@ -1180,7 +1180,6 @@
    "outputs": [],
    "source": [
     "fname = f'../experiments/{exp_name}/results.pkl'\n",
-    ".\n",
     "errors_df.to_pickle(fname)\n",
     "print('saved as', fname)"
    ]
