--- a/python/factor_graph/GTSAM.ipynb
+++ b/python/factor_graph/GTSAM.ipynb
@@ -216,7 +216,8 @@
    },
    "outputs": [],
    "source": [
-    "from helpers import get_angles, get_vector, print_plane, plot_all\n",
+    "from helpers import get_angles, get_vector, print_plane\n",
+    "from plot import plot_projections\n",
     "from gtsam import Unit3, Pose2\n",
     "from gtsam import OrientedPlane3 as Plane\n",
     "\n",
@@ -241,7 +242,7 @@
     "    plane2 = plane.transform(pose1) #, plane)\n",
     "    print_plane(\"second\", plane2)\n",
     "\n",
-    "plot_all(estimate)"
+    "plot_projections(estimate)"
    ]
   },
   {
@@ -297,7 +298,7 @@
     "    # get plane measurements\n",
     "    plane_local, distance, azimuth, elevation = wall_simulation.measure_plane()\n",
     "    print_plane(f\" pose {t}\", plane_local)\n",
-    "plot_all(estimate)\n",
+    "plot_projections(estimate)\n",
     "plt.show()"
    ]
   },
@@ -327,7 +328,7 @@
     "\n",
     "graph = NonlinearFactorGraph()\n",
     "\n",
-    "plane_noise = gtsam.noiseModel.Diagonal.Sigmas([0.8, 0.8, 5])\n",
+    "plane_noise = gtsam.noiseModel.Diagonal.Sigmas([1e-3, 1e-10, 1e-10])\n",
     "pose_noise = gtsam.noiseModel.Isotropic.Sigma(6, 0.01)\n",
     "\n",
     "factor = PriorFactorOrientedPlane3(P(0), plane, plane_noise)\n",
@@ -345,12 +346,14 @@
     "    \n",
     "    # pose estimates\n",
     "    pose_t = wall_simulation.measure_pose()\n",
+    "    #pose_t = wall_simulation.expected_pose(time)\n",
     "    factor = PriorFactorPose3(X(time), pose_t, pose_noise)\n",
     "    print(f\"Added prior factor to pose {time}: {pose_t.translation().round(3)}\")\n",
     "    graph.push_back(factor)\n",
     "    \n",
     "    # plane measurements\n",
     "    plane_meas, azimuth, elevation, distance = wall_simulation.measure_plane()\n",
+    "    #plane_meas = Plane(n=gtsam.Unit3([0, -1, 0]), d=1.0)\n",
     "    factor = PlaneFactor(plane_meas.planeCoefficients(), plane_noise, X(time), P(0))\n",
     "    graph.push_back(factor)\n",
     "    print(f\"Added plane factor from pose {time} with distance: {plane_meas.distance():.2f}\")\n",
@@ -388,10 +391,11 @@
     "print('initial error = {}'.format(graph.error(initial_estimate)))\n",
     "print('final error = {}'.format(graph.error(result)))\n",
     "\n",
-    "plot_all(result)\n",
+    "plot_projections(result)\n",
     "plot.plot_trajectory(0, initial_estimate, axis_length=0.2, ls=\":\")\n",
     "plot.plot_trajectory(1, initial_estimate, axis_length=0.2, ls=\":\")\n",
     "plot.plot_trajectory(2, initial_estimate, axis_length=0.2, ls=\":\")\n",
+    "print(result)\n",
     "#marginals = Marginals(graph, result)\n",
     "#fig = plt.figure()\n",
     "#plot.plot_trajectory(1, result, cov_scale=0.1, axis_length=0.1)\n",
@@ -416,6 +420,7 @@
    "source": [
     "# below is inspired from gtsam/python/tests/test_VisualISAMExample \n",
     "# and python/gtsam/utils/visual_isam.py\n",
+    "from helpers import rad\n",
     "\n",
     "params = gtsam.ISAM2Params()\n",
     "params.setRelinearizeSkip(1) # always relinearize\n",
@@ -424,20 +429,33 @@
     "\n",
     "new_factors = gtsam.NonlinearFactorGraph()\n",
     "initial_estimates = gtsam.Values()\n",
+    "all_initial_estimates = gtsam.Values()\n",
     "\n",
     "plane = gtsam.OrientedPlane3(Unit3([0, -1.0, 0]), 1)\n",
     "pose_0 = gtsam.Pose3()\n",
     "initial_estimates.insert(P(0), plane)\n",
+    "all_initial_estimates.insert(P(0), plane)\n",
     "\n",
-    "plane_noise = gtsam.noiseModel.Diagonal.Sigmas([0.8, 0.8, 5])\n",
-    "pose_noise = gtsam.noiseModel.Isotropic.Sigma(6, 0.01)\n",
+    "#distance, azimuth, elevation\n",
+    "plane_noise = gtsam.noiseModel.Diagonal.Sigmas([1e-2, rad(1e-10), rad(1e-10)])\n",
+    "pose_noise = gtsam.noiseModel.Diagonal.Sigmas([\n",
+    "    0.01, # x\n",
+    "    0.01, # y \n",
+    "    1e-10, # z\n",
+    "    rad(1), # roll\n",
+    "    rad(1), # pitch\n",
+    "    rad(3), # yaw\n",
+    "])\n",
     "\n",
     "isam.update(new_factors, initial_estimates)\n",
     "\n",
     "wall_simulation = WallSimulation()\n",
     "wall_simulation.initialize(plane, pose_0)\n",
+    "wall_simulation.set_velocities(linear_m_s=0.1, yaw_deg_s=45)\n",
+    "wall_simulation.plane_noise = plane_noise\n",
+    "wall_simulation.pose_noise = pose_noise\n",
     "\n",
-    "times = np.linspace(0, 4, 10)\n",
+    "times = np.linspace(0, 4, 5)\n",
     "\n",
     "for t, time in enumerate(times):\n",
     "    wall_simulation.move_until_time(time)\n",
@@ -453,6 +471,7 @@
     "    factors.push_back(factor)\n",
     "    \n",
     "    initial_estimates.insert(X(t), pose_prior)\n",
+    "    all_initial_estimates.insert(X(t), pose_prior)\n",
     "    \n",
     "    #isam.update(factors, initial_estimates)\n",
     "    #factors = gtsam.NonlinearFactorGraph()\n",
@@ -463,12 +482,19 @@
     "    factor = PlaneFactor(plane_meas.planeCoefficients(), plane_noise, X(t), P(0))\n",
     "    factors.push_back(factor)\n",
     "    \n",
+    "    \n",
     "    isam.update(factors, initial_estimates)\n",
     "    \n",
     "    new_result = isam.calculateEstimate()\n",
     "    \n",
-    "plot_all(new_result, top=False, side=False)\n",
-    "plt.show()"
+    "plot_projections(new_result, top=True, side=False, perspective=False)\n",
+    "plt.title('result')\n",
+    "plt.show()\n",
+    "plot_projections(all_initial_estimates, top=True, side=False, perspective=False)\n",
+    "plt.title('initial estimates')\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"plane result\", new_result.atOrientedPlane3(P(0)))"
    ]
   },
   {
@@ -489,11 +515,15 @@
     "from audio_gtsam.wall_backend import WallBackend\n",
     "\n",
     "wall_backend = WallBackend()\n",
+    "wall_backend.set_noise()\n",
     "\n",
     "plane = gtsam.OrientedPlane3(Unit3([0, -1.0, 0]), 1)\n",
     "pose_0 = gtsam.Pose3()\n",
     "wall_simulation = WallSimulation()\n",
     "wall_simulation.initialize(plane, pose_0)\n",
+    "wall_simulation.set_velocities(linear_m_s=0.1, yaw_deg_s=45)\n",
+    "wall_simulation.plane_noise = wall_backend.plane_noise\n",
+    "wall_simulation.pose_noise = wall_backend.pose_noise\n",
     "\n",
     "for t, time in enumerate(times):\n",
     "    wall_simulation.move_until_time(time)\n",
@@ -503,17 +533,13 @@
     "    \n",
     "    plane_meas, azimuth, elevation, distance = wall_simulation.measure_plane()\n",
     "    \n",
-    "    #print(f\"prior factor with {pose_t.translation()}\")\n",
     "    wall_backend.add_pose(r_world=pose_t.translation(), \n",
     "                          yaw=pose_t.rotation().yaw())\n",
-    "    wall_angle = 180 + azimuth * 180 / np.pi \n",
-    "    print(f\"adding plane measurement: {distance*100:.0f}cm {wall_angle:5.0f}deg\")\n",
-    "    wall_backend.add_plane(distance, azimuth, elevation)\n",
-    "    \n",
+    "    plane_factor = wall_backend.add_plane(distance=distance, azimuth=azimuth, elevation=elevation)\n",
     "    planes, poses = wall_backend.get_results()\n",
-    "    #plot_all(new_result, top=False, side=False)\n",
-    "    #plt.show()\n",
-    "plot_all(wall_backend.result, top=False, side=False)\n",
+    "    \n",
+    "plot_projections(wall_backend.all_initial_estimates, top=False, side=False, ls=\":\")\n",
+    "plot_projections(wall_backend.result, top=False, side=False, )\n",
     "plt.show()"
    ]
   },
