Some cleaning up for TAM

--- a/python/factor_graph/GTSAM.ipynb
+++ b/python/factor_graph/GTSAM.ipynb
@@ -240,7 +240,7 @@
     "    pose1 = pose1 * pose_delta\n",
     "    estimate.insert(X(i+1), pose1)\n",
     "    plane2 = plane.transform(pose1) #, plane)\n",
-    "    print_plane(\"second\", plane2)\n",
+    "    print_plane(\"next\", plane2)\n",
     "\n",
     "plot_projections(estimate)"
    ]
@@ -255,50 +255,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from helpers import WallSimulation\n",
-    "from gtsam import noiseModel, Sampler\n",
-    "wall_simulation = WallSimulation()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "np.random.seed(1)\n",
+    "from helpers import WallSimulation\n",
+    "from gtsam import noiseModel, Sampler\n",
     "\n",
+    "np.random.seed(1)\n",
     "X = symbol_shorthand.X\n",
     "P = symbol_shorthand.P\n",
+    "\n",
+    "wall_simulation = WallSimulation()\n",
+    "real = Values()\n",
+    "initial_guess = Values()\n",
+    "times = range(1, 4)\n",
     "\n",
     "pose_0 = Pose3()\n",
     "plane = Plane(n=Unit3([0, -1, 0]), d=1.0)\n",
     "print_plane(\"initial\", plane)\n",
     "\n",
+    "real.insert(X(0), pose_0)\n",
+    "real.insert(P(0), plane)\n",
+    "\n",
     "wall_simulation = WallSimulation()\n",
     "wall_simulation.initialize(plane, pose_0)\n",
     "\n",
-    "estimate = Values()\n",
-    "estimate.insert(P(0), plane)\n",
     "\n",
-    "real = Values()\n",
-    "real.insert(P(0), plane)\n",
+    "#plane_initial = Plane(n=Unit3([1, 1, 1]), d=0.5) # doesn't work!\n",
+    "plane_initial = Plane(n=Unit3([-1, -1, -1]), d=0.5) # works!\n",
+    "initial_guess.insert(X(0), pose_0)\n",
+    "initial_guess.insert(P(0), plane_initial)\n",
     "\n",
-    "for t in range(4):\n",
+    "for t in times:\n",
     "    wall_simulation.move_until_time(time=t)\n",
+    "    \n",
     "    pose_t = wall_simulation.real_pose()\n",
-    "    pose_t_noiseless = wall_simulation.expected_pose(time=t)\n",
-    "    estimate.insert(X(t), pose_t)\n",
+    "    pose_t_expected = wall_simulation.expected_pose(time=t)\n",
+    "    real.insert(X(t), pose_t)\n",
+    "    initial_guess.insert(X(t), pose_t_expected)\n",
     "    \n",
     "    # get plane measurements\n",
     "    plane_local, distance, azimuth, elevation = wall_simulation.measure_plane()\n",
     "    print_plane(f\" pose {t}\", plane_local)\n",
-    "plot_projections(estimate)\n",
+    "plot_projections(real, perspective=False)\n",
+    "plot.plot_trajectory(1, initial_guess, axis_length=0.2, ls=\":\")\n",
+    "plot.plot_trajectory(2, initial_guess, axis_length=0.2, ls=\":\")\n",
     "plt.show()"
    ]
   },
@@ -317,48 +320,39 @@
    "source": [
     "from gtsam import PriorFactorOrientedPlane3 # is created automatically!\n",
     "from gtsam import OrientedPlane3Factor as PlaneFactor\n",
+    "from helpers import rad, deg\n",
     "\n",
-    "times = range(4)\n",
     "wall_simulation = WallSimulation()\n",
     "wall_simulation.initialize(plane, pose_0)\n",
     "\n",
-    "# Create and solve factor graph for above example\n",
-    "initial_estimate = Values()\n",
-    "initial_estimate.insert(P(0), plane)\n",
+    "plane_confidence = gtsam.noiseModel.Diagonal.Sigmas([rad(10), rad(10), 5e-2]) # angle, angle, distance\n",
+    "pose_confidence = gtsam.noiseModel.Diagonal.Sigmas([rad(10)]*3 + [1e-2, 1e-2, 1e-2]) # 3 angles, x y z\n",
     "\n",
     "graph = NonlinearFactorGraph()\n",
     "\n",
-    "plane_noise = gtsam.noiseModel.Diagonal.Sigmas([1e-3, 1e-10, 1e-10])\n",
-    "pose_noise = gtsam.noiseModel.Isotropic.Sigma(6, 0.01)\n",
-    "\n",
-    "factor = PriorFactorOrientedPlane3(P(0), plane, plane_noise)\n",
-    "print(f\"Added plane factor from pose {0} with distance: {plane.distance():.2f}\")\n",
-    "graph.push_back(factor)\n",
-    "\n",
-    "#for i, meas in enumerate(measurements.values()):\n",
-    "for time in times: \n",
+    "for t in times: \n",
+    "    wall_simulation.move_until_time(t)\n",
     "    \n",
-    "    wall_simulation.move_until_time(time)\n",
-    "    \n",
-    "    # initialization\n",
-    "    pose_prior = wall_simulation.expected_pose(time)\n",
-    "    initial_estimate.insert(X(time), pose_prior)\n",
-    "    \n",
-    "    # pose estimates\n",
+    "    # pose measurements\n",
     "    pose_t = wall_simulation.measure_pose()\n",
-    "    #pose_t = wall_simulation.expected_pose(time)\n",
-    "    factor = PriorFactorPose3(X(time), pose_t, pose_noise)\n",
-    "    print(f\"Added prior factor to pose {time}: {pose_t.translation().round(3)}\")\n",
+    "    factor = PriorFactorPose3(X(t), pose_t, pose_confidence)\n",
     "    graph.push_back(factor)\n",
+    "    print(f\"Added prior factor to pose {t}: {pose_t.translation().round(3)}\")\n",
     "    \n",
     "    # plane measurements\n",
     "    plane_meas, azimuth, elevation, distance = wall_simulation.measure_plane()\n",
-    "    #plane_meas = Plane(n=gtsam.Unit3([0, -1, 0]), d=1.0)\n",
-    "    factor = PlaneFactor(plane_meas.planeCoefficients(), plane_noise, X(time), P(0))\n",
+    "    factor = PlaneFactor(plane_meas.planeCoefficients(), plane_confidence, X(t), P(0))\n",
     "    graph.push_back(factor)\n",
-    "    print(f\"Added plane factor from pose {time} with distance: {plane_meas.distance():.2f}\")\n",
-    "    \n",
-    "    # imu measurements"
+    "    print(f\"Added plane factor from pose {t} with distance: {plane_meas.distance():.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(graph)"
    ]
   },
   {
@@ -376,31 +370,33 @@
    },
    "outputs": [],
    "source": [
-    "from gtsam import GaussNewtonOptimizer, NonlinearOptimizerParams\n",
-    "#params = gtsam.DoglegParams()\n",
-    "#params = gtsam.GaussNewtonOptimizerParams()\n",
-    "#params.setVerbosity(\"VALUES\")\n",
-    "#print('====================')\n",
-    "#print('Initial estimtae:')\n",
-    "#print(initial_estimate)\n",
-    "#print(params)\n",
-    "#optimizer = DoglegOptimizer(graph, initial_estimate, params)\n",
-    "optimizer = GaussNewtonOptimizer(graph, initial_estimate)\n",
+    "from gtsam import GaussNewtonOptimizer\n",
+    "\n",
+    "optimizer = GaussNewtonOptimizer(graph, initial_guess)\n",
+    "\n",
     "print('Optimizing...')\n",
     "result = optimizer.optimize()\n",
-    "print('initial error = {}'.format(graph.error(initial_estimate)))\n",
+    "\n",
+    "print('initial error = {}'.format(graph.error(initial_guess)))\n",
     "print('final error = {}'.format(graph.error(result)))\n",
     "\n",
-    "plot_projections(result)\n",
-    "plot.plot_trajectory(0, initial_estimate, axis_length=0.2, ls=\":\")\n",
-    "plot.plot_trajectory(1, initial_estimate, axis_length=0.2, ls=\":\")\n",
-    "plot.plot_trajectory(2, initial_estimate, axis_length=0.2, ls=\":\")\n",
-    "print(result)\n",
-    "#marginals = Marginals(graph, result)\n",
-    "#fig = plt.figure()\n",
-    "#plot.plot_trajectory(1, result, cov_scale=0.1, axis_length=0.1)\n",
-    "#plot.set_axes_equal(1)\n",
-    "#fig.set_size_inches(10, 10)"
+    "plot_projections(result, perspective=False, ls=\"--\")\n",
+    "plot.plot_trajectory(1, initial_guess, axis_length=0.2, ls=\":\")\n",
+    "plot.plot_trajectory(2, initial_guess, axis_length=0.2, ls=\":\")\n",
+    "plot.plot_trajectory(1, real, axis_length=0.2, ls=\"-\")\n",
+    "plot.plot_trajectory(2, real, axis_length=0.2, ls=\"-\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "marginals = Marginals(graph, result)\n",
+    "print(marginals)"
    ]
   },
   {
@@ -515,7 +511,7 @@
     "from audio_gtsam.wall_backend import WallBackend\n",
     "\n",
     "wall_backend = WallBackend()\n",
-    "wall_backend.set_noise()\n",
+    "wall_backend.set_confidence()\n",
     "\n",
     "plane = gtsam.OrientedPlane3(Unit3([0, -1.0, 0]), 1)\n",
     "pose_0 = gtsam.Pose3()\n",
