--- a/python/WallPreAnalysis.ipynb
+++ b/python/WallPreAnalysis.ipynb
@@ -734,6 +734,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname = f'../experiments/{exp_name}/results.pkl'\n",
+    "errors_df.to_pickle(fname)\n",
+    "print('saved as', fname)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1121,12 +1132,6 @@
    "source": [
     "from factor_graph.plot import plot_projections\n",
     "import gtsam\n",
-    "# Try factor graph implementation\n",
-    "print(\"matrix\", results_matrix_moving.shape)\n",
-    "print(\"dists\", dists_cm.shape)\n",
-    "print(\"positions\", positions_cm.shape)\n",
-    "print(\"yaws_deg\", yaws_deg.shape)\n",
-    "\n",
     "from audio_gtsam.wall_backend import WallBackend\n",
     "\n",
     "wall_backend = WallBackend()\n",
@@ -1134,36 +1139,26 @@
     "\n",
     "use_groundtruth = False\n",
     "\n",
-    "starting = gtsam.Values()\n",
-    "\n",
-    "#pose = gtsam.Pose3(t=positions_cm[n_calib, :]*1e-2, r=gtsam.Rot3.Ypr(yaw_start, 0, 0))\n",
-    "#starting.insert(gtsam.symbol_shorthand.X(0), gtsam.Pose3(r=gtsam.Rot3.Ypr(yaw_start, 0, 0), t=[0, 0, 0]))\n",
-    "#starting.insert(gtsam.symbol_shorthand.P(0), gtsam.OrientedPlane3(n=gtsam.Unit3([0, 1, 0]), d=0.6))\n",
-    "#plot_projections(starting, axis_length=0.2, ls=\"-\", perspective=False)\n",
-    "\n",
     "for i, prob_dists in enumerate(results_matrix_moving.T):\n",
     "    if i < n_calib:\n",
-    "        print(\"skipping\", i)\n",
+    "        #print(\"skipping cause calibrating:\", i)\n",
     "        continue\n",
     "    \n",
     "    position_cm = positions_cm[i, :] - positions_cm[n_calib, :]\n",
     "    yaw_deg = yaws_deg[i]\n",
     "    #print(\"yaw:\", round(yaw_deg))\n",
     "    \n",
-    "    #print(f\"prior factor with {pose_t.translation()}\")\n",
     "    pose_factor = wall_backend.add_pose(r_world=position_cm * 1e-2, \n",
     "                                        yaw=yaw_start + (yaw_deg / 180 * np.pi))\n",
-    "    print(\"position_cm\", position_cm)\n",
-    "    #wall_backend.add_plane(distance=0.6, azimuth=-np.pi/2)\n",
     "    \n",
     "    distance_gt = int(60 + position_cm[1])\n",
-    "    print(\"ground truth distance\", distance_gt)\n",
+    "    #print(\"ground truth distance\", distance_gt)\n",
     "    if use_groundtruth:\n",
     "        dists_cm = np.arange(100)\n",
     "        prob_dists = np.zeros(100)\n",
     "        prob_dists[distance_gt] = 1.0\n",
     "    try:\n",
-    "        wall_backend.add_planes_from_distance_distribution(dists_cm, prob_dists, azimuth_deg=-90, n_estimates=1, verbose=True)\n",
+    "        wall_backend.add_planes_from_distance_distribution(dists_cm, prob_dists, azimuth_deg=-90, n_estimates=1, verbose=False)\n",
     "    except Exception as e:\n",
     "        print(e)\n",
     "wall_backend.get_results()\n",
@@ -1171,17 +1166,6 @@
     "plt.show()\n",
     "plot_projections(wall_backend.result, axis_length=0.1, perspective=False, side=True)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fname = f'../experiments/{exp_name}/results.pkl'\n",
-    "errors_df.to_pickle(fname)\n",
-    "print('saved as', fname)"
    ]
   },
   {
