Move latex stuff

--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -24,7 +24,7 @@
 
 % set figure path (such that it works for eps files too. 
 % \newcommand{\figurepath}{figures/Dynamic/}
-\newcommand{\figurepath}{../plots/experiments/}
+\newcommand{\figurepath}{../python/plots/experiments/}
 \graphicspath{\figurepath}
 \epstopdfsetup{outdir=\figurepath}
 
