Add utils and deprecated folders

--- a/python/ApproachAngleFlying.ipynb
+++ b/python/ApproachAngleFlying.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Approach Angle: Flying Experiments\n",
+    "\n",
+    "Detect the approach angle while approaching the wall and playing a single frequency."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -33,12 +42,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from wall_analysis import parse_experiments\n",
+    "from utils.wall_analysis import parse_experiments\n",
     "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
     "import seaborn as sns\n",
-    "from simulation import get_df_theory\n",
-    "from plotting_tools import pcolorfast_custom\n",
-    "from plotting_tools import save_fig\n",
+    "from utils.simulation import get_df_theory\n",
+    "from utils.plotting_tools import pcolorfast_custom\n",
+    "from utils.plotting_tools import save_fig\n",
     "\n",
     "linestyles = {\"estimated\": \"-\", \"theo\": \":\", \"theo_corr\": \"-.\", \"measured\": \"-\"}\n",
     "colors = {\"estimated\": \"C0\", \"theo\": \"black\", \"theo_corr\": \"black\", \"measured\":\"C0\"}\n",
@@ -208,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from geometry import Context\n",
+    "from utils.geometry import Context\n",
     "context = Context.get_crazyflie_setup(dim=2)\n",
     "fig, ax = plt.subplots()\n",
     "context.plot(ax=ax)\n",
@@ -276,7 +285,7 @@
    },
    "outputs": [],
    "source": [
-    "from frequency_analysis import add_spectrogram\n",
+    "from utils.frequency_analysis import add_spectrogram\n",
     "\n",
     "df_total = df_total.assign(spectrogram=None,freqs=None)\n",
     "df_total = df_total.apply(add_spectrogram, axis=1)\n",
@@ -312,8 +321,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from calibration import get_calibration_function_median, get_calibration_function_dict\n",
-    "from inference import Inference\n",
+    "from utils.calibration import get_calibration_function_median, get_calibration_function_dict\n",
+    "from utils.inference import Inference\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(10, 5)\n",
@@ -330,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataset_parameters import kwargs_datasets\n",
+    "from utils.dataset_parameters import kwargs_datasets\n",
     "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
     "\n",
     "kwargs = kwargs_datasets[exp_name][\"audio_deck\"]\n",
@@ -354,11 +363,12 @@
    "source": [
     "# spec_masked, freqs_masked = data_collector.fill_from_row()\n",
     "from copy import deepcopy\n",
-    "from data_collector import DataCollector\n",
-    "from estimators import DistanceEstimator, get_estimate\n",
-    "from inference import eps_normalize\n",
-    "from simulation import get_freq_slice_theory\n",
     "from itertools import cycle\n",
+    "\n",
+    "from utils.data_collector import DataCollector\n",
+    "from utils.estimators import DistanceEstimator, get_estimate\n",
+    "from utils.inference import eps_normalize\n",
+    "from utils.simulation import get_freq_slice_theory\n",
     "\n",
     "eps = 1e-5  # for plotting only\n",
     "max_plot_distance = 110\n",
@@ -741,8 +751,8 @@
    },
    "outputs": [],
    "source": [
-    "from frequency_analysis import add_spectrogram\n",
-    "from plotting_tools import pcolorfast_custom\n",
+    "from utils.frequency_analysis import add_spectrogram\n",
+    "from utils.plotting_tools import pcolorfast_custom\n",
     "\n",
     "df_total = df_total.assign(spectrogram=None)\n",
     "df_total = df_total.apply(add_spectrogram, axis=1)\n",
@@ -777,10 +787,10 @@
    },
    "outputs": [],
    "source": [
-    "from inference import get_approach_angle_fft\n",
-    "from data_collector import DataCollector\n",
-    "from estimators import AngleEstimator, get_estimate\n",
     "from copy import deepcopy\n",
+    "from utils.inference import get_approach_angle_fft\n",
+    "from utils.data_collector import DataCollector\n",
+    "from utils.estimators import AngleEstimator, get_estimate\n",
     "\n",
     "plot_raw = False #True #False\n",
     "\n",
@@ -972,10 +982,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from inference import get_approach_angle_fft\n",
-    "from data_collector import DataCollector\n",
-    "from estimators import AngleEstimator, get_estimate\n",
     "from copy import deepcopy\n",
+    "from utils.inference import get_approach_angle_fft\n",
+    "from utils.data_collector import DataCollector\n",
+    "from utils.estimators import AngleEstimator, get_estimate\n",
     "\n",
     "mics = [0, 1, 2, 3]\n",
     "n_mics = len(mics)\n",
@@ -1059,7 +1069,7 @@
     "    \n",
     "    fig, axs = plt.subplots(1, 2)\n",
     "    fig.set_size_inches(10, 3)\n",
-    "    axs[0].pcolorfast(distance_idx, angle_estimator.ANGLES_DEG, np.log10(results_matrix))\n",
+    "    axs[0].pcolorfast(distance_idx, angle_estimator.ANGLES_DEG, results_matrix)\n",
     "    axs[0].axhline(gt_angle, color='C1')\n",
     "    axs[0].plot(distance_idx, angle_vector, color='C1', ls=':')\n",
     "    axs[0].set_title(f'exp {k}')\n",
