--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Distance: Flying Experiments\n",
+    "\n",
+    "Detect the approach angle while approaching the wall and playing a single frequency."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -35,8 +44,8 @@
    "outputs": [],
    "source": [
     "def get_calib_function(calib=\"stepper\"):\n",
-    "    from calibration import get_calibration_function_median\n",
-    "    from calibration import get_calibration_function_moving\n",
+    "    from utils.calibration import get_calibration_function_median\n",
+    "    from utils.calibration import get_calibration_function_moving\n",
     "    \n",
     "    if calib == \"manual\":\n",
     "        print(\"using manual\")\n",
@@ -96,8 +105,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from calibration import get_calibration_function_median\n",
-    "from plotting_tools import save_fig\n",
+    "from utils.calibration import get_calibration_function_median\n",
+    "from utils.plotting_tools import save_fig\n",
     "\n",
     "from matplotlib import cm\n",
     "cmap = cm.get_cmap('inferno')\n",
@@ -181,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from calibration import get_calibration_function_moving\n",
+    "from utils.calibration import get_calibration_function_moving\n",
     "\n",
     "#name = \"manual\"\n",
     "name = \"flying\"\n",
